--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="png" href="images/computer.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <script src="main.js" type="text/javascript"></script>
-    
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 
 <body onload="onloadIndex(); onloadFunctionReport()">
@@ -21,6 +21,7 @@
     <div class="page-container">
         <div class="page-header">
             <h2>Dashboard</h2>
+            <!--
             <div class="modals">
                 <a class="newSoldItem" href="#" onclick="showElement()">Nueva venta</a>
                 <div class="createNewSoldItem hide" id="createNewSoldItem">
@@ -45,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
         <div class="dashboard">
             <div class="dashboard-box">
