--- a/componentes.html
+++ b/componentes.html
@@ -7,11 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PC Store - Componentes</title>
     <link rel="icon" type="png" href="images/computer.png" />
-    <script src="main.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="styles/css/index.css">
+    <script src="revisedMain.js" type="text/javascript"></script>
+    <style>
+        table {border-collapse: collapse;}
+        table, th, td{border: 1px solid black;}
+    </style>
 </head>
 
-<body onload="onloadFunctionComponents()">
+<body onload="onloadComponents()">
     <header class="header">
         <a href="index.html">
             <h1>Pc store</h1>
@@ -24,7 +27,7 @@
         </a>
         <div class="page-header">
             <h2>Componentes vendidos</h2>
-            <div class="modals">
+            <!--<div class="modals">
                 <a class="newSoldItem" href="#" onclick="showElement()">Nueva venta</a>
                 <div class="createNewSoldItem hide" id="createNewSoldItem">
                     <div class="modal-container">
@@ -48,33 +51,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
-        <div class="adminInfo" id="adminInfo">
-            <div class="infoContainer">
-                <div class="infoComponents">
-                    <div class='page-info-container' id="componentsDataContainer"></div>
-                    <div class="table-container">
-                        <div class="table-header">
-                            <table cellpadding="0" cellspacing="0">
-                                <thead>
-                                    <tr>
-                                        <th>Componente</th>
-                                        <th>Cantidad vendida</th>
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>
-                        <div class="table-content">
-                            <table cellpadding="0" cellspacing="0">
-                                <tbody id="componentsTable">
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!--COMPONENTS TABLE-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Componente</th>
+                    <th>Cantidad vendida</th>
+                </tr>
+            </thead>
+            <tbody id="componentsTable">
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
