--- a/ventas.html
+++ b/ventas.html
@@ -7,10 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PC Store - Ventas</title>
     <link rel="icon" type="png" href="images/computer.png" />
-    <script src="main.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="styles/css/ventas.css">
+    <script src="revisedMain.js" type="text/javascript"></script>
+    <style>
+        table {border-collapse: collapse;}
+        table, th, td{border: 1px solid black;}
+    </style>
 </head>
-<body onload="onloadFunctionSales()">
+<body onload="onloadSales()">
     <header class="header">
         <a href="index.html">
             <h1>Pc store</h1>
@@ -23,82 +26,20 @@
         </a>
         <div class="page-header">
             <h2>Ventas</h2>
-            <div class="createNewSoldItem hide" id="createNewSoldItem">
-                    <div class="modal-container">
-                        <div class="modal-header">
-                            <h3>Nueva Venta</h3>
-                            <button type="button" onclick="closeWindow()">Cerrar</button>
-                        </div>
-                        <div class="selects-container">
-                            <select id="newSeller">
-                            </select>
-                            <select id="newBranch"></select>
-                            <select id="newComponent"></select>
-                        </div>
-                        <div class="modal-buttons">
-                            <span class="error" id="chosenComponentError"></span>
-                            <span class="error" id="sellerOrBranchError"></span>
-                            <a href="#" id="componentsDataConfirm" onclick="addComponentToList()">Agregar
-                                componente</a>
-                            <div id="showNewComponent"></div>
-                            <a href='#' id="confirmSale" onclick="confirmSale()">Confirmar venta</a>
-                        </div>
-                    </div>
-                </div>
-            <div class="modals">
-                <a class="newSoldItem" href="#" onclick="showElement()">Nueva venta</a>
-                <div class="createNewSoldItem hide" id="createNewSoldItem">
-                    <div class="modal-container">
-                        <div class="modal-header">
-                            <h3>Nueva Venta</h3>
-                            <button type="button" onclick="closeWindow()">Cerrar</button>
-                        </div>
-                        <div class="selects-container">
-                            <select id="newSeller">
-                            </select>
-                            <select id="newBranch"></select>
-                            <p id="showNewSeller"></p>
-                            <p id="showNewBranch"></p>
-                            <select id="newComponent"></select>
-                        </div>
-                        <div class="modal-buttons">
-                            <p class="error" id="chosenComponentError"></p>
-                            <p class="error" id="sellerOrBranchError"></p>
-                            <a href="#" id="componentsDataConfirm" onclick="addComponentToList()">Agregar componente</a>
-                            <p id="showNewComponent"></p>
-                            <a href="#" id="confirmSale" onclick="confirmSale(); hrefList();">Confirmar venta</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-        <div class="adminInfo" id="adminInfo">
-            <div class="infoContainer">
-                <div class="infoComponents">
-                    <div class='page-info-container' id="componentsDataContainer"></div>
-                    <div class="table-container">
-                        <div class="table-header">
-                            <table cellpadding="0" cellspacing="0">
-                                <thead>
-                                    <tr>
-                                        <th>Fecha</th>
-                                        <th>Vendedora</th>
-                                        <th>Componentes</th>
-                                        <th>Sucursal</th>
-                                        <th>Precio total</th>
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>
-                        <div class="table-content">
-                            <table cellpadding="0" cellspacing="0">
-                                <tbody id="soldItemsTable">
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!--SOLD COMPUTERS TABLE-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Fecha</th>
+                    <th>Vendedora</th>
+                    <th>Componentes</th>
+                    <th>Sucursal</th>
+                    <th>Precio total</th>
+                </tr>
+            </thead>
+            <tbody id="soldComputersTable"></tbody> 
+        </table>
     </div>
 </body>
 </html>
