--- a/vendedoras.html
+++ b/vendedoras.html
@@ -7,10 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PC Stores - Vendedoras</title>
     <link rel="icon" type="png" href="images/computer.png" />
-    <script src="main.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="styles/css/index.css">
+    <script src="revisedMain.js" type="text/javascript"></script>
+    <style>
+        table {border-collapse: collapse;}
+        table, th, td{border: 1px solid black;}
+    </style>
 </head>
-<body onload="onloadFunctionSellers()">
+<body onload="onloadClerks()">
     <header class="header">
         <a href="index.html">
             <h1>Pc store</h1>
@@ -22,69 +25,33 @@
         </a>
         <div class="page-header">
             <h2>Vendedoras</h2>
-            <div class="modals">
-                <a class="newSoldItem" href="#" onclick="showElement()">Nueva venta</a>
-                <div class="createNewSoldItem hide" id="createNewSoldItem">
-                    <div class="modal-container">
-                        <div class="modal-header">
-                            <h3>Nueva Venta</h3>
-                            <button type="button" onclick="closeWindow()">Cerrar</button>
-                        </div>
-                        <div class="selects-container">
-                            <select id="newSeller">
-                            </select>
-                            <select id="newBranch"></select>
-                            <select id="newComponent"></select>
-                        </div>
-                        <div class="modal-buttons">
-                            <p class="error" id="chosenComponentError"></p>
-                            <p class="error" id="sellerOrBranchError"></p>
-                            <a href="#" id="componentsDataConfirm" onclick="addComponentToList()">Agregar componente</a>
-                            <p id="showNewComponent"></p>
-                            <a href="#" id="confirmSale" onclick="confirmSale()">Confirmar venta</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="adminInfo">
             <div class="table-container">
                 <h4>Ventas del mes</h4>
-                <div class="table-header">
-                    <table cellpadding="0" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th>Vendedora</th>
-                                <th>Ventas totales</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
-                <div class="table-content">
-                    <table cellpadding="0" cellspacing="0">
-                        <tbody id="totalSalesSellerTable">
-                        </tbody>
-                    </table>
-                </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Vendedora</th>
+                            <th>Ventas totales</th>
+                        </tr>
+                    </thead>
+                    <tbody id="totalSalesSellerTable">
+                    </tbody>
+                </table>
             </div>
             <div class="table-container">
                 <h4>Vendedora del mes</h4>
-                <div class="table-header">
-                    <table cellpadding="0" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th>Mes</th>
-                                <th>Vendedora</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
-                <div class="table-content">
-                    <table cellpadding="0" cellspacing="0">
-                        <tbody id="sellerOfMonthTable">
-                        </tbody>
-                    </table>
-                </div>
+                <table cellpadding="0" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Mes</th>
+                            <th>Vendedora</th>
+                        </tr>
+                    </thead>
+                    <tbody id="clerkOfMonthTable">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
