total sales per clerk

--- a/vendedoras.html
+++ b/vendedoras.html
@@ -36,7 +36,7 @@
                             <th>Ventas totales</th>
                         </tr>
                     </thead>
-                    <tbody id="totalSalesSellerTable">
+                    <tbody id="salesPerClerkTable">
                     </tbody>
                 </table>
             </div>
