starting to use sass with node.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PC Store - Home</title>
     <link rel="icon" type="png" href="images/computer.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-    <script src="main.js" type="text/javascript"></script>
+    <script src="revisedMain.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 
@@ -19,34 +19,24 @@
         </a>
     </header>
     <div class="page-container">
-        <div class="page-header">
-            <h2>Dashboard</h2>
-        </div>
+        <h2>Dashboard</h2>
         <div class="dashboard">
-            <div class="dashboard-box">
-                <a href="vendedoras.html">
-                    <img src="images/seller-med.png" alt='Vendedora'>
-                    <h3>Vendedoras</h3>
-                </a>
-            </div>
-            <div class="dashboard-box">
-                <a href="ventas.html">
-                    <img src="images/sales-med.png" alt='ventas'>
-                    <h3>Ventas</h3>
-                </a>
-            </div>
-            <div class="dashboard-box">
-                <a href="componentes.html">
-                    <img src="images/component-med.png" alt='componentes'>
-                    <h3>Componentes</h3>
-                </a>
-            </div>
-            <div class="dashboard-box">
-                <a href="sucursal.html">
-                    <img src="images/shop-med.png" alt='sucursal'>
-                    <h3>Sucursales</h3>
-                </a>
-            </div>
+            <a href="vendedoras.html">
+                <img src="images/seller-med.png" alt='Vendedora'>
+                <h3>Vendedoras</h3>
+            </a>
+            <a href="ventas.html">
+                <img src="images/sales-med.png" alt='ventas'>
+                <h3>Ventas</h3>
+            </a>
+            <a href="componentes.html">
+                <img src="images/component-med.png" alt='componentes'>
+                <h3>Componentes</h3>
+            </a>
+            <a href="sucursal.html">
+                <img src="images/shop-med.png" alt='sucursal'>
+                <h3>Sucursales</h3>
+            </a>
         </div>
         <div class="page-header">
             <h2>Reporte del mes</h2>
