--- a/index.html
+++ b/index.html
@@ -22,20 +22,32 @@
         <h2>Dashboard</h2>
         <div class="dashboard">
             <a href="vendedoras.html">
-                <img src="images/seller-med.png" alt='Vendedora'>
-                <h3>Vendedoras</h3>
+                <div class="inner-box">
+                    <img src="images/seller-med.png" alt='Vendedora'>
+                    <h3>Vendedoras</h3> 
+                </div>
+                <p>Ver mas</p>
             </a>
             <a href="ventas.html">
-                <img src="images/sales-med.png" alt='ventas'>
-                <h3>Ventas</h3>
+                <div class="inner-box">
+                    <img src="images/sales-med.png" alt='ventas'>
+                    <h3>Ventas</h3>  
+                </div>
+                <p>Ver mas</p>
             </a>
             <a href="componentes.html">
-                <img src="images/component-med.png" alt='componentes'>
-                <h3>Componentes</h3>
+                <div class="inner-box">
+                    <img src="images/component-med.png" alt='componentes'>
+                    <h3>Componentes</h3>  
+                </div>
+                <p>Ver mas</p>
             </a>
             <a href="sucursal.html">
-                <img src="images/shop-med.png" alt='sucursal'>
-                <h3>Sucursales</h3>
+                <div class="inner-box">
+                    <img src="images/shop-med.png" alt='sucursal'>
+                    <h3>Sucursales</h3> 
+                </div>
+                <p>Ver mas</p>
             </a>
         </div>
         <div class="page-header">
