gradients in index

--- a/index.html
+++ b/index.html
@@ -21,34 +21,23 @@
     <div class="page-container">
         <h2>Dashboard</h2>
         <div class="dashboard">
-            <a href="vendedoras.html">
-                <div class="inner-box">
-                    <img src="images/seller-med.png" alt='Vendedora'>
-                    <h3>Vendedoras</h3> 
-                </div>
-                <p>Ver mas</p>
-            </a>
-            <a href="ventas.html">
-                <div class="inner-box">
-                    <img src="images/sales-med.png" alt='ventas'>
-                    <h3>Ventas</h3>  
-                </div>
-                <p>Ver mas</p>
-            </a>
-            <a href="componentes.html">
-                <div class="inner-box">
-                    <img src="images/component-med.png" alt='componentes'>
-                    <h3>Componentes</h3>  
-                </div>
-                <p>Ver mas</p>
-            </a>
-            <a href="sucursal.html">
-                <div class="inner-box">
-                    <img src="images/shop-med.png" alt='sucursal'>
-                    <h3>Sucursales</h3> 
-                </div>
-                <p>Ver mas</p>
-            </a>
+            <div>
+                <h3>Vendedoras</h3> 
+                <p>Lorem ipsum dolor sit. Cumque molestias sed laborum consequatur a ducimus temporibus cupiditate</p>
+                <a  href="vendedoras.html">Ver mas</a>
+            </div>
+            <div>
+                <h3>Ventas</h3>  
+                <a href="ventas.html">Ver mas</a>
+            </div>
+            <div>
+                <h3>Componentes</h3>  
+                <a href="componentes.html">Ver mas</a>
+            </div>
+            <div>
+                <h3>Sucursales</h3> 
+                <a href="sucursal.html">Ver mas</a>
+            </div>
         </div>
         <div class="page-header">
             <h2>Reporte del mes</h2>
