languages in header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
 <body onload="onloadIndex(); onloadFunctionReport()">
     <header class="header"> 
-        <a href="index.html">
+        <div class="languages">
+            <a href="#">Espanol</a>
+            <a href="#">English</a>
+            <a href="#">日本語</a>
+        </div>
+        <a class="companyName" href="index.html">
             <h1>Pc store</h1>
         </a>
     </header>
