--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
             <a href="#">English</a>
             <a href="#">日本語</a>
         </div>
-        <a class="companyName" href="index.html">
-            <h1>Pc store</h1>
-        </a>
+        <div class="companyName">
+            <a href="index.html">
+                <h1>Pc store</h1>
+            </a>
+        </div>
+        
     </header>
     <div class="page-container">
-        <h2>Dashboard</h2>
+        <!--DASHBOARD-->
         <div class="dashboard">
             <div>
                 <h3>Vendedoras</h3> 
@@ -44,6 +47,11 @@
                 <a href="sucursal.html">Ver mas</a>
             </div>
         </div>
+        <!--NEW SALE-->
+        <div class="newSale">
+            <a href="#" class="button">Nueva compra</a>
+        </div>
+        <!--REPORTE-->
         <div class="page-header">
             <h2>Reporte del mes</h2>
         </div>
