--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 
-<body onload="onloadIndex(); onloadFunctionReport()">
+<body onload="onloadIndex()">
     <header class="header"> 
         <div class="languages">
             <a href="#">Espanol</a>
@@ -56,25 +56,19 @@
             <h2>Reporte del mes</h2>
         </div>
         <div class="report">
-            <div class="report-item">
-                <div id="bestSellingClerk">
-                    <h3>Vendedora del mes</h3>
-                </div>
+            <div>
+                <h3>Vendedora del mes</h3>
             </div>
-            <div class="report-item">
-                <div id="salesPerMonth">
-                    <h3>Ventas por mes</h3>
-                </div>
+            <div>
+                <h3>Ventas por mes</h3>
+                <table id="salesPerMonth">
+                </table>
             </div>
-            <div class="report-item">
-                <div id="bestSellingProduct">
-                    <h3>Producto estrella</h3>
-                </div>
+            <div>
+                <h3>Producto estrella</h3>
             </div>
-            <div class="report-item">
-                <div id="salesPerBranch">
-                    <h3>Ventas por sucursal</h3>
-                </div>
+            <div>
+                <h3>Ventas por sucursal</h3>
             </div>
         </div>
     </div>
