best-selling clerk

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2>Reporte del mes</h2>
         </div>
         <div class="report">
-            <div>
+            <div id="bestSellingClerk">
                 <h3>Vendedora del mes</h3>
             </div>
             <div>
@@ -64,11 +64,13 @@
                 <table id="salesPerMonth">
                 </table>
             </div>
-            <div>
+            <div id="bestSellingProduct">
                 <h3>Producto estrella</h3>
             </div>
             <div>
                 <h3>Ventas por sucursal</h3>
+                <table id="salesPerBranch">
+                </table>
             </div>
         </div>
     </div>
