new sale on top in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="onloadIndex()">
     <header class="header"> 
         <div class="languages">
-            <a href="#">Espanol</a>
+            <a href="#">Español</a>
             <a href="#">English</a>
             <a href="#">日本語</a>
         </div>
@@ -27,29 +27,29 @@
         
     </header>
     <div class="page-container">
+        <!--NEW SALE-->
+        <div class="newSale">
+            <a href="#" class="button">Nueva compra</a>
+        </div>
         <!--DASHBOARD-->
         <div class="dashboard">
             <div>
                 <h3>Vendedoras</h3> 
                 <p>Lorem ipsum dolor sit. Cumque molestias sed laborum consequatur a ducimus temporibus cupiditate</p>
-                <a  href="vendedoras.html">Ver mas</a>
+                <a  href="vendedoras.html">Ver más</a>
             </div>
             <div>
                 <h3>Ventas</h3>  
-                <a href="ventas.html">Ver mas</a>
+                <a href="ventas.html">Ver más</a>
             </div>
             <div>
                 <h3>Componentes</h3>  
-                <a href="componentes.html">Ver mas</a>
+                <a href="componentes.html">Ver más</a>
             </div>
             <div>
                 <h3>Sucursales</h3> 
-                <a href="sucursal.html">Ver mas</a>
+                <a href="sucursal.html">Ver más</a>
             </div>
-        </div>
-        <!--NEW SALE-->
-        <div class="newSale">
-            <a href="#" class="button">Nueva compra</a>
         </div>
         <!--REPORTE-->
         <div class="page-header">
