--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <h1>Pc store</h1>
             </a>
         </div>
-        
     </header>
     <div class="page-container">
         <!--NEW SALE-->
@@ -51,26 +50,32 @@
                 <a href="sucursal.html">Ver más</a>
             </div>
         </div>
-        <!--REPORTE-->
-        <div class="page-header">
-            <h2>Reporte del mes</h2>
-        </div>
+        <!--REPORT-->
         <div class="report">
-            <div id="bestSellingClerk">
-                <h3>Vendedora del mes</h3>
+            <div class="page-header">
+                <h2>Reporte</h2>
             </div>
-            <div>
-                <h3>Ventas por mes</h3>
-                <table id="salesPerMonth">
-                </table>
+            <!--FIRST TWO-->
+            <div class="firstReport">
+                <div id="bestSellingClerk">
+                    <h3>Vendedora del mes</h3>
+                </div>
+                <div>
+                    <h3>Ventas por mes</h3>
+                    <table id="salesPerMonth">
+                    </table>
+                </div>
             </div>
-            <div id="bestSellingProduct">
-                <h3>Producto estrella</h3>
-            </div>
-            <div>
-                <h3>Ventas por sucursal</h3>
-                <table id="salesPerBranch">
-                </table>
+            <!--SECOND TWO-->
+            <div class="secondReport">
+                <div id="bestSellingProduct">
+                    <h3>Producto estrella</h3>
+                </div>
+                <div>
+                    <h3>Ventas por sucursal</h3>
+                    <table id="salesPerBranch">
+                    </table>
+                </div>
             </div>
         </div>
     </div>
