--- a/componentes.html
+++ b/componentes.html
@@ -8,50 +8,28 @@
     <title>PC Store - Componentes</title>
     <link rel="icon" type="png" href="images/computer.png" />
     <script src="revisedMain.js" type="text/javascript"></script>
-    <style>
-        table {border-collapse: collapse;}
-        table, th, td{border: 1px solid black;}
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 
 <body onload="onloadComponents()">
-    <header class="header">
-        <a href="index.html">
-            <h1>Pc store</h1>
-        </a>
+    <header class="header"> 
+        <div class="companyName">
+            <a href="index.html">
+                <h1>Pc store</h1>
+            </a>
+        </div>
     </header>
     <div class="page-container">
         <a class="returnToHome" href="index.html">
             <img src="images/home-icon.png">
             <span> Volver </span>
         </a>
+        <!--NEW SALE-->
+        <div class="newSale">
+            <a href="#" class="button">Nueva compra</a>
+        </div>
         <div class="page-header">
             <h2>Componentes vendidos</h2>
-            <!--<div class="modals">
-                <a class="newSoldItem" href="#" onclick="showElement()">Nueva venta</a>
-                <div class="createNewSoldItem hide" id="createNewSoldItem">
-                    <div class="modal-container">
-                        <div class="modal-header">
-                            <h3>Nueva Venta</h3>
-                            <button type="button" onclick="closeWindow()">Cerrar</button>
-                        </div>
-                        <div class="selects-container">
-                            <select id="newSeller">
-                            </select>
-                            <select id="newBranch"></select>
-                            <select id="newComponent"></select>
-                        </div>
-                        <div class="modal-buttons">
-                            <span class="error" id="chosenComponentError"></span>
-                            <span class="error" id="sellerOrBranchError"></span>
-                            <a href="#" id="componentsDataConfirm" onclick="addComponentToList()">Agregar
-                                componente</a>
-                            <div id="showNewComponent"></div>
-                            <a href='#' id="confirmSale" onclick="confirmSale()">Confirmar venta</a>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
         </div>
         <!--COMPONENTS TABLE-->
         <table>
