--- a/sucursal.html
+++ b/sucursal.html
@@ -8,26 +8,30 @@
     <title>PC Store - Sucursales</title>
     <link rel="icon" type="png" href="images/computer.png" />
     <script src="revisedMain.js" type="text/javascript"></script>
-    <style>
-        table {border-collapse: collapse;}
-        table, th, td{border: 1px solid black;}
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 <body onload="onloadBranch()">
-    <header class="header">
-        <a href="index.html">
-            <h1>Pc store</h1>
-        </a>
+    <header class="header"> 
+        <div class="companyName">
+            <a href="index.html">
+                <h1>Pc store</h1>
+            </a>
+        </div>
     </header>
     <div class="page-container">
         <a class="returnToHome" href="index.html">
-            <img src="images/home-icon.png">
-            <span> Volver </span>
+            <span>Home</span>
         </a>
+        <!--NEW SALE-->
+        <div class="newSale">
+            <a href="#" class="button">Nueva compra</a>
+        </div>
+        <!--TITLE-->
         <div class="page-header">
             <h2>Sucursales</h2>
         </div>
         <div class="adminInfo">
+            <!--FIRST TABLE-->
             <div class="table-container">
                 <h4>Sucursal del mes</h4>
                 <table>
@@ -41,6 +45,7 @@
                     </tbody>
                 </table>
             </div>
+            <!--SECOND TABLE-->
             <div class="table-container">
                 <h4>Ventas totales por sucursal</h4>
                 <table>
