--- a/vendedoras.html
+++ b/vendedoras.html
@@ -8,25 +8,33 @@
     <title>PC Stores - Vendedoras</title>
     <link rel="icon" type="png" href="images/computer.png" />
     <script src="revisedMain.js" type="text/javascript"></script>
-    <style>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
+    <!--<style>
         table {border-collapse: collapse;}
         table, th, td{border: 1px solid black;}
-    </style>
+    </style>-->
 </head>
 <body onload="onloadClerks()">
-    <header class="header">
-        <a href="index.html">
-            <h1>Pc store</h1>
-        </a>
+    <header class="header"> 
+        <div class="companyName">
+            <a href="index.html">
+                <h1>Pc store</h1>
+            </a>
+        </div>
     </header>
     <div class="page-container">
         <a class="returnToHome" href="index.html">
-            <img src="images/home-icon.png"> <span> Volver </span>
+            <span>Home</span>
         </a>
+        <!--NEW SALE-->
+        <div class="newSale">
+            <a href="#" class="button">Nueva compra</a>
+        </div>
         <div class="page-header">
             <h2>Vendedoras</h2>
         </div>
         <div class="adminInfo">
+            <!--FIRST TABLE-->
             <div class="table-container">
                 <h4>Ventas del mes</h4>
                 <table>
@@ -40,6 +48,7 @@
                     </tbody>
                 </table>
             </div>
+            <!--SECOND TABLE-->
             <div class="table-container">
                 <h4>Vendedora del mes</h4>
                 <table cellpadding="0" cellspacing="0">
