--- a/ventas.html
+++ b/ventas.html
@@ -8,22 +8,24 @@
     <title>PC Store - Ventas</title>
     <link rel="icon" type="png" href="images/computer.png" />
     <script src="revisedMain.js" type="text/javascript"></script>
-    <style>
-        table {border-collapse: collapse;}
-        table, th, td{border: 1px solid black;}
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 <body onload="onloadSales()">
-    <header class="header">
-        <a href="index.html">
-            <h1>Pc store</h1>
-        </a>
+    <header class="header"> 
+        <div class="companyName">
+            <a href="index.html">
+                <h1>Pc store</h1>
+            </a>
+        </div>
     </header>
     <div class="page-container">
         <a class="returnToHome" href="index.html">
-            <img src="images/home-icon.png">
-            <span> Volver </span>
+            <span>Home</span>
         </a>
+        <!--NEW SALE-->
+        <div class="newSale">
+            <a href="#" class="button">Nueva compra</a>
+        </div>
         <div class="page-header">
             <h2>Ventas</h2>
         </div>
