--- a/componentes.html
+++ b/componentes.html
@@ -21,8 +21,7 @@
     </header>
     <div class="page-container">
         <a class="returnToHome" href="index.html">
-            <img src="images/home-icon.png">
-            <span> Volver </span>
+            <span>Home</span>
         </a>
         <!--NEW SALE-->
         <div class="newSale">
