--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <div class="dashboard">
             <div>
                 <h3>Vendedoras</h3> 
-                <p>Lorem ipsum dolor sit. Cumque molestias sed laborum consequatur a ducimus temporibus cupiditate</p>
                 <a  href="vendedoras.html">Ver más</a>
             </div>
             <div>
@@ -57,26 +56,27 @@
             </div>
             <!--FIRST TWO-->
             <div class="firstReport">
-                <div id="bestSellingClerk">
+                <div id="bestSellingClerk" class="reportBox">
                     <h3>Vendedora del mes</h3>
                 </div>
-                <div>
-                    <h3>Ventas por mes</h3>
-                    <table id="salesPerMonth">
-                    </table>
+                <div id="bestSellingProduct" class="reportBox">
+                    <h3>Producto estrella</h3>
                 </div>
             </div>
             <!--SECOND TWO-->
             <div class="secondReport">
-                <div id="bestSellingProduct">
-                    <h3>Producto estrella</h3>
-                </div>
-                <div>
-                    <h3>Ventas por sucursal</h3>
-                    <table id="salesPerBranch">
+                <div class="reportBox">
+                    <h3>Ventas por mes</h3>
+                    <table id="salesPerMonth" class="indexTable">
                     </table>
                 </div>
-            </div>
+                <div class="reportBox">
+                    <h3>Ventas por sucursal</h3>
+                    <table id="salesPerBranch" class="indexTable">
+                    </table>
+                </div>
+            </div>  
+            
         </div>
     </div>
 </body>
