new sale HTML in all files

--- a/vendedoras.html
+++ b/vendedoras.html
@@ -23,12 +23,26 @@
         </div>
     </header>
     <div class="page-container">
-        <a class="returnToHome" href="index.html">
-            <span>Home</span>
+        <!--RETURN HOME-->
+        <a class="returnHome" href="index.html">Home
         </a>
         <!--NEW SALE-->
         <div class="newSale">
-            <a href="#" class="button">Nueva compra</a>
+            <a href="#" class="button newSaleButton" onclick="newSale()">Nueva compra</a>
+            <div class="newSaleModal hide" id="newSaleModal">
+                <a href="#" onclick="cancelNewSale()" class="cancelSale">Cancelar</a>
+                <select id="newClerk"></select>
+                <select id="newBranch"></select>
+                <select id="newComponent" class="componentsSelect"></select>
+                <a href="#" onclick="addComponentToList()" class="addBtn">Agregar componente</a>
+                <ul id="showNewComponent" class="showNewComponent"></ul>
+                <a href="#" onclick="confirmSelection()" class="confirmBtn">Confirmar seleccion</a>
+                <div id="newSaleContainer" class="newSaleContainer"></div>
+                <div class="confirmNewSaleContainer hide" id="confirmNewSaleContainer">
+                    <a href="#" onclick="confirmNewSale()"  class="confirmBtn">Confirmar compra</a>
+                    <div class="messageConfirmNewSale" id="messageConfirmNewSale"></div>
+                </div>
+            </div>
         </div>
         <div class="page-header">
             <h2>Vendedoras</h2>
