--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <script src="revisedMain.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body onload="onloadIndex()">
@@ -42,26 +43,28 @@
                     <a href="#" onclick="confirmNewSale()"  class="confirmBtn">Confirmar compra</a>
                     <div class="messageConfirmNewSale" id="messageConfirmNewSale"></div>
                 </div>
-                
-                
             </div>
         </div>
         <!--DASHBOARD-->
         <div class="dashboard">
             <div>
                 <h3>Vendedoras</h3> 
+                <i class="fas fa-female"></i>
                 <a  href="vendedoras.html">Ver más</a>
             </div>
             <div>
                 <h3>Ventas</h3>  
+                <i class="fas fa-shopping-cart"></i>
                 <a href="ventas.html">Ver más</a>
             </div>
             <div>
                 <h3>Componentes</h3>  
+                <i class="fas fa-desktop"></i>
                 <a href="componentes.html">Ver más</a>
             </div>
             <div>
                 <h3>Sucursales</h3> 
+                <i class="fas fa-store-alt"></i>
                 <a href="sucursal.html">Ver más</a>
             </div>
         </div>
