--- a/vendedoras.html
+++ b/vendedoras.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="png" href="images/computer.png" />
     <script src="revisedMain.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!--<style>
         table {border-collapse: collapse;}
         table, th, td{border: 1px solid black;}
@@ -24,8 +25,7 @@
     </header>
     <div class="page-container">
         <!--RETURN HOME-->
-        <a class="returnHome" href="index.html">Home
-        </a>
+        <a class="returnHome" href="index.html"><i class="fas fa-home"></i> Home</a>
         <!--NEW SALE-->
         <div class="newSale">
             <a href="#" class="button newSaleButton" onclick="newSale()">Nueva compra</a>
