--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <select id="newComponent" class="componentsSelect"></select>
                 <a href="#" onclick="addComponentToList()" class="addBtn">Agregar componente</a>
                 <ul id="showNewComponent" class="showNewComponent"></ul>
-                <a href="#" onclick="confirmSelection()" class="confirmBtn">Confirmar seleccion</a>
+                <a href="#" onclick="confirmSelection()" class="confirmBtn">Confirmar selección</a>
                 <div id="newSaleContainer" class="newSaleContainer"></div>
                 <div class="confirmNewSaleContainer hide" id="confirmNewSaleContainer">
                     <a href="#" onclick="confirmNewSale()"  class="confirmBtn">Confirmar compra</a>
@@ -73,7 +73,6 @@
             <div class="page-header">
                 <h2>Reporte</h2>
             </div>
-            <!--FIRST TWO-->
             <div class="firstReport">
                 <div id="bestSellingClerk" class="reportBox">
                     <h3>Vendedora del mes</h3>
@@ -82,7 +81,6 @@
                     <h3>Producto estrella</h3>
                 </div>
             </div>
-            <!--SECOND TWO-->
             <div class="secondReport">
                 <div class="reportBox">
                     <h3>Ventas por mes</h3>
@@ -95,7 +93,6 @@
                     </table>
                 </div>
             </div>  
-            
         </div>
     </div>
 </body>
