--- a/sucursal.html
+++ b/sucursal.html
@@ -32,7 +32,7 @@
                 <select id="newComponent" class="componentsSelect"></select>
                 <a href="#" onclick="addComponentToList()" class="addBtn">Agregar componente</a>
                 <ul id="showNewComponent" class="showNewComponent"></ul>
-                <a href="#" onclick="confirmSelection()" class="confirmBtn">Confirmar seleccion</a>
+                <a href="#" onclick="confirmSelection()" class="confirmBtn">Confirmar selección</a>
                 <div id="newSaleContainer" class="newSaleContainer"></div>
                 <div class="confirmNewSaleContainer hide" id="confirmNewSaleContainer">
                     <a href="#" onclick="confirmNewSale()"  class="confirmBtn">Confirmar compra</a>
