--- a/componentes.html
+++ b/componentes.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="page-header">
-            <h2>Componentes vendidos</h2>
+            <h2>Componentes</h2>
         </div>
         <!--COMPONENTS TABLE-->
         <table>
