--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PC Store - Home</title>
     <link rel="icon" type="png" href="images/computer.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-    <script src="revisedMain.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
@@ -50,22 +50,22 @@
             <div>
                 <h3>Vendedoras</h3> 
                 <i class="fas fa-female"></i>
-                <a  href="vendedoras.html">Ver más</a>
+                <a class="seeMore" href="vendedoras.html">Ver más</a>
             </div>
             <div>
                 <h3>Ventas</h3>  
                 <i class="fas fa-shopping-cart"></i>
-                <a href="ventas.html">Ver más</a>
+                <a class="seeMore" href="ventas.html">Ver más</a>
             </div>
             <div>
                 <h3>Componentes</h3>  
                 <i class="fas fa-desktop"></i>
-                <a href="componentes.html">Ver más</a>
+                <a class="seeMore" href="componentes.html">Ver más</a>
             </div>
             <div>
                 <h3>Sucursales</h3> 
                 <i class="fas fa-store-alt"></i>
-                <a href="sucursal.html">Ver más</a>
+                <a class="seeMore" href="sucursal.html">Ver más</a>
             </div>
         </div>
         <!--REPORT-->
