--- a/ventas.html
+++ b/ventas.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PC Store - Ventas</title>
     <link rel="icon" type="png" href="images/computer.png" />
-    <script src="revisedMain.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
