--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="newSale">
             <a href="#" class="button newSaleButton" onclick="newSale()">Nueva compra</a>
             <div class="newSaleModal hide" id="newSaleModal">
-                <a href="#" onclick="cancelNewSale()" class="cancelSale">Cancelar</a>
+                <a href="#" onclick="cancelNewSale()" class="cancelSale"><i class="fas fa-times"></i></a>
                 <select id="newClerk"></select>
                 <select id="newBranch"></select>
                 <select id="newComponent" class="componentsSelect"></select>
