--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 <div class="confirmNewSaleContainer hide" id="confirmNewSaleContainer">
                     <a href="#" onclick="confirmNewSale()"  class="confirmBtn">Confirmar compra</a>
                     <div class="messageConfirmNewSale" id="messageConfirmNewSale"></div>
+                    <div class="newSaleRedirect hide" id="newSaleRedirect">
+                       <a href="ventas.html">Ir a ventas</a>
+                       <a href="#" onclick="newSale()">Nueva compra</a>
+                       <a href="#" onclick="cancelNewSale()">Cerrar</a>
+                    </div>
                 </div>
             </div>
         </div>
