problems with new Date() and local storage solved

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             <div class="firstReport">
                 <div id="bestSellingClerk" class="reportBox">
-                    <h3>Vendedora del mes</h3>
+                    <h3>Mejor vendedora</h3>
                 </div>
                 <div id="bestSellingProduct" class="reportBox">
                     <h3>Producto estrella</h3>
