--- a/vendedoras.html
+++ b/vendedoras.html
@@ -70,7 +70,7 @@
             <!--SECOND TABLE-->
             <div class="table-container">
                 <h4>Vendedora del mes</h4>
-                <table cellpadding="0" cellspacing="0">
+                <table>
                     <thead>
                         <tr>
                             <th>Mes</th>
