--- a/ventas.html
+++ b/ventas.html
@@ -38,9 +38,9 @@
                     <a href="#" onclick="confirmNewSale()"  class="confirmBtn">Confirmar compra</a>
                     <div class="messageConfirmNewSale" id="messageConfirmNewSale"></div>
                     <div class="newSaleRedirect hide" id="newSaleRedirect">
-                        <a href="ventas.html">Ir a ventas</a>
-                        <a href="#" onclick="newSale()">Nueva compra</a>
-                        <a href="#" onclick="cancelNewSale()">Cerrar</a>
+                        <a href="ventas.html" class="bottomBtn">Ir a ventas</a>
+                        <a href="#" onclick="newSale()" class="bottomBtn">Nueva compra</a>
+                        <a href="#" onclick="cancelNewSale()" class="bottomBtn">Cerrar</a>
                     </div>
                 </div>
             </div>
